--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,11 +8,15 @@ spring:
   jpa:
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+arifin:
+  app:
+    jwtSecret: inipasswordhash
+    jwtExpirationMs: 86400000
 #  flyway:
 #    encoding: UTF-8
 #    enabled: ${FLYWAY_ENABLED:true}
@@ -23,7 +27,3 @@ spring:
 #    clean-on-validation-error: true
 #    connect-retries: 2
 #  messages.basename: i18n/messages
-arifin:
-  app:
-    jwtSecret: inipasswordhash
-    jwtExpirationMs: 86400000
