--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,13 +2,13 @@ server:
     port: 8080
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/testdb
+    url: jdbc:postgresql://localhost:5432/testdb2
     username: postgres
     password: admin
   jpa:
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -18,13 +18,3 @@ arifin:
   app:
     jwtSecret: inipasswordhash
     jwtExpirationMs: 86400000
-#  flyway:
-#    encoding: UTF-8
-#    enabled: ${FLYWAY_ENABLED:true}
-#    baseline-on-migrate: true
-#    check-location: true
-#    locations: classpath:/db/migration/postgresql
-#    clean-disabled: false
-#    clean-on-validation-error: true
-#    connect-retries: 2
-#  messages.basename: i18n/messages
